[package]
name = "envsafe"
version = "0.1.0"
authors = ["Christopher Morton <sonro@gmx.com>"]
description = "Rust library to safely combine dotenv files with existing environment"
repository = "https://github.com/sonro/envsafe"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.80.0"

[dependencies]
ahash = "0.8.11"

